refactor: update service names and environment variables in README and compose files

--- a/sample.env
+++ b/sample.env
@@ -1,9 +1,10 @@
-# .env.example
+# sample.env
+# Sample environment variables for the project
 
-# Server configuration
-SS_SERVER_VERSION=main
-SS_WEB_VERSION=main
-SS_SERVER_PORT=5000
+# Core configuration
+SS_CORE_VERSION=nightly
+SS_WEB_VERSION=nightly
+SS_CORE_PORT=5000
 SS_WEB_PORT=3000
 
 # Database configuration
