--- a/compose.yaml
+++ b/compose.yaml
@@ -1,10 +1,10 @@
 name: star-sync
 
 services:
-    ss-server:
-        image: ghcr.io/star-sync/ss-server:${SS_SERVER_VERSION}
+    ss-core:
+        image: ghcr.io/star-sync/ss-core:${SS_CORE_VERSION}
         ports:
-            - "${SS_SERVER_PORT}:8080"
+            - "${SS_CORE_PORT}:8080"
         env_file: ".env"
         networks:
             - star-sync
