chore: update environment variable versions to latest

--- a/sample.env
+++ b/sample.env
@@ -2,8 +2,8 @@
 # Sample environment variables for the project
 
 # Core configuration
-SS_CORE_VERSION=nightly
-SS_WEB_VERSION=nightly
+SS_CORE_VERSION=latest
+SS_WEB_VERSION=latest
 SS_CORE_PORT=5000
 SS_WEB_PORT=3000
 
