--- a/compose.yaml
+++ b/compose.yaml
@@ -1,10 +1,10 @@
 name: star-sync
 
 services:
-    ss-server:
-        image: ghcr.io/star-sync/ss-server:${SS_SERVER_VERSION}
+    ss-core:
+        image: ghcr.io/star-sync/ss-core:${SS_CORE_VERSION}
         ports:
-            - "${SS_SERVER_PORT}:8080"
+            - "${SS_CORE_PORT}:8000"
         env_file: ".env"
         networks:
             - star-sync
@@ -12,7 +12,7 @@ services:
     ss-web:
         image: ghcr.io/star-sync/ss-web:${SS_WEB_VERSION}
         ports:
-            - "${SS_WEB_PORT}:5000"
+            - "${SS_WEB_PORT}:3000"
         env_file: ".env"
         networks:
             - star-sync
