[chore] Added web .env to sample.env

--- a/sample.env
+++ b/sample.env
@@ -4,6 +4,7 @@
 # Core configuration
 SS_CORE_VERSION=latest
 SS_WEB_VERSION=latest
+SS_CORE_HOST=ss-core
 SS_CORE_PORT=5000
 SS_WEB_PORT=3000
 
@@ -14,3 +15,7 @@ SS_DB_USER=your_username
 SS_DB_PASSWORD=your_password
 SS_DB_NAME=your_database
 
+# Web configuration
+NEXT_PUBLIC_API_HOST=${SS_CORE_HOST}
+NEXT_PUBLIC_API_PORT=${SS_CORE_PORT}
+NEXT_PUBLIC_API_URL="http://${NEXT_PUBLIC_API_HOST}:${NEXT_PUBLIC_API_PORT}"
