--- a/sample.env
+++ b/sample.env
@@ -1,11 +1,15 @@
 # sample.env
 # Sample environment variables for the project
 
+# Internal use ONLY
+SS_WEB_INTERNAL_PORT=3000
+SS_CORE_INTERNAL_PORT=5000
+
 # Core configuration
 SS_CORE_VERSION=latest
-SS_WEB_VERSION=latest
+SS_WEB_VERSION=sha-ff5f855
 SS_CORE_HOST=ss-core
-SS_CORE_PORT=5000
+SS_CORE_PORT=8000
 SS_WEB_PORT=3000
 
 # Database configuration
