--- a/compose.yaml
+++ b/compose.yaml
@@ -19,10 +19,7 @@ services:
 
     ss-db:
         image: postgres:latest
-        environment:
-            POSTGRES_USER: ${SS_DB_USER}
-            POSTGRES_PASSWORD: ${SS_DB_PASSWORD}
-            POSTGRES_DB: ${SS_DB_NAME}
+        env_file: ".env"
         ports:
             - "${SS_DB_PORT}:5432"
         networks:
@@ -33,6 +30,7 @@ services:
 
 networks:
     star-sync:
+        driver: bridge
 
 volumes:
     db-data:
