revert to localhost

--- a/sample.env
+++ b/sample.env
@@ -8,7 +8,9 @@ SS_CORE_INTERNAL_PORT=8000
 # Core configuration
 SS_CORE_VERSION=latest
 SS_WEB_VERSION=latest
-SS_CORE_HOST=ss-core
+# ss_core_host should technically be the name of the docker container as it is in the docker-compose file
+# but its not working for some reason, so lets use localhost for now and once we figure out the issue we can change it
+SS_CORE_HOST=localhost
 SS_CORE_PORT=8000
 SS_WEB_PORT=3000
 
