--- a/sample.env
+++ b/sample.env
@@ -1,19 +1,25 @@
 # sample.env
 # Sample environment variables for the project
 
+# Internal use ONLY
+SS_WEB_INTERNAL_PORT=3000
+SS_CORE_INTERNAL_PORT=8000
+
 # Core configuration
 SS_CORE_VERSION=latest
 SS_WEB_VERSION=latest
-SS_CORE_HOST=ss-core
-SS_CORE_PORT=5000
+# ss_core_host should technically be the name of the docker container as it is in the docker-compose file
+# but its not working for some reason, so lets use localhost for now and once we figure out the issue we can change it
+SS_CORE_HOST=localhost
+SS_CORE_PORT=8000
 SS_WEB_PORT=3000
 
 # Database configuration
 SS_DB_HOST=localhost
 SS_DB_PORT=5432
-SS_DB_USER=your_username
-SS_DB_PASSWORD=your_password
-SS_DB_NAME=your_database
+SS_DB_USER=starsync
+SS_DB_PASSWORD=starsync
+SS_DB_NAME=starsync
 
 # Web configuration
 NEXT_PUBLIC_API_HOST=${SS_CORE_HOST}
