--- a/core/sample.env
+++ b/core/sample.env
@@ -15,11 +15,11 @@ SS_CORE_PORT=8000
 SS_WEB_PORT=3000
 
 # Database configuration
-SS_DB_HOST=localhost
-SS_DB_PORT=5432
-SS_DB_USER=starsync
-SS_DB_PASSWORD=starsync
-SS_DB_NAME=starsync
+POSTGRES_HOST=localhost
+POSTGRES_PORT=5432
+POSTGRES_USER=root
+POSTGRES_PASSWORD=password
+POSTGRES_DB=ss_database
 
 # Web configuration
 NEXT_PUBLIC_API_HOST=${SS_CORE_HOST}
