--- a/core/sample.env
+++ b/core/sample.env
@@ -20,6 +20,7 @@ POSTGRES_PORT=5432
 POSTGRES_USER=root
 POSTGRES_PASSWORD=password
 POSTGRES_DB=ss_database
+DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
 
 # Web configuration
 NEXT_PUBLIC_API_HOST=${SS_CORE_HOST}
