[FIX] add explicit DB URL (#8)
* update Docker Compose configuration and add DATABASE_URL to sample.env

* update database host in sample.env to use service name

--- a/core/sample.env
+++ b/core/sample.env
@@ -15,11 +15,12 @@ SS_CORE_PORT=8000
 SS_WEB_PORT=3000
 
 # Database configuration
-POSTGRES_HOST=localhost
+POSTGRES_HOST=ss-db
 POSTGRES_PORT=5432
 POSTGRES_USER=root
 POSTGRES_PASSWORD=password
 POSTGRES_DB=ss_database
+DATABASE_URL=postgres://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}
 
 # Web configuration
 NEXT_PUBLIC_API_HOST=${SS_CORE_HOST}
