--- a/core/sample.env
+++ b/core/sample.env
@@ -13,6 +13,9 @@ SS_WEB_VERSION=latest
 SS_CORE_HOST=localhost
 SS_CORE_PORT=8000
 SS_WEB_PORT=3000
+STATION_SIMULATOR_VERSION=latset
+STATION_SIMULATOR_INTERNAL_PORT=5000
+STATION_SIMULATOR_PORT=5100
 
 # Database configuration
 POSTGRES_HOST=ss-db
